Fix first article picture overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1361,7 +1361,7 @@ a.navbar-brand.our_logo {
   background: url(../images/Rectangle64.png) center center no-repeat;
   background-size: cover;
   width: 100%;
-  min-height: 500px;
+  min-height: 650px;
 }
 .article-picture {
   min-width: 1100px;
@@ -1607,6 +1607,24 @@ a.navbar-brand.our_logo {
   width: 64%;
   padding-left: 100px;
 }
+
+/* First Article Picture*/
+.first-picture-wrapper {
+  position: absolute;
+  width: 100%;
+  top: 440px;
+}
+.article-container.first {
+  padding-top: 110px;
+}
+.article-block-left.first {
+  background: none;
+}
+.article-block-right.first {
+  background: none;
+}
+
+/* First Article */
 /* REMOVED
 .footer {
   position: absolute;
